# tradinglab-pro

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
installer/: install.bat  install.py  install.sh
src/: __init__.py
src/core/: ai_assistant.py  backtest_engine.py  data_manager.py  fundamentals.py  indicators.py  optimizer.py  portfolio.py  scanner.py
src/styles/: theme.py
src/ui/: ai_tab.py  backtest_tab.py  chart_tab.py  data_tab.py  fundamentals_tab.py  main_window.py  optimizer_tab.py  portfolio_tab.py  scanner_tab.py  strategy_tab.py
tests/: test_backtest_engine.py  test_optimizer.py
